apps-dev/soda/gitops/service/ingressrule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: espsrcsoda-ingress
  namespace: espsrcsoda
  #annotations:
  #  traefik.ingress.kubernetes.io/router.middlewares: espsrcsoda-strip-espsrcsoda@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: "dev.soda.espsrc.iaa.csic.es"
      http:
        paths:
          - path: "/soda/"
            pathType: Prefix
            backend:
              service:
                name: ska-src-soda
                port:
                  number: 8082
